--- a/index.html
+++ b/index.html
@@ -173,7 +173,23 @@ Our results on numerous challenging scenarios of reflection and fence removal de
       <div class="title">Download</div>
       <div class="row">
 
-        <div class="col m6 s12 center">
+        <div class="col m3 s12 center">
+          <a href="https://www.cmlab.csie.ntu.edu.tw/~yulunliu/ObstructionRemoval_/cvpr20_obstructionRemoval_poster_mtk.pdf" target="_blank">
+            <img src="website/images/icon_pdf.png">
+          </a>
+          <br>
+          <a href="https://www.cmlab.csie.ntu.edu.tw/~yulunliu/ObstructionRemoval_/cvpr20_obstructionRemoval_poster_mtk.pdf" target="_blank">Poster</a>
+        </div>
+
+        <div class="col m3 s12 center">
+          <a href="https://www.cmlab.csie.ntu.edu.tw/~yulunliu/ObstructionRemoval_/cvpr20_obstructionRemoval_video_slides_15min.pptx" target="_blank">
+            <img src="website/images/icon_pptx.png">
+          </a>
+          <br>
+          <a href="https://www.cmlab.csie.ntu.edu.tw/~yulunliu/ObstructionRemoval_/cvpr20_obstructionRemoval_video_slides_15min.pptx" target="_blank">Slides</a>
+        </div>
+
+        <div class="col m3 s12 center">
           <a href="https://github.com/alex04072000/ObstructionRemoval" target="_blank">
             <img src="website/images/github.png">
           </a>
@@ -181,7 +197,7 @@ Our results on numerous challenging scenarios of reflection and fence removal de
           <a href="https://github.com/alex04072000/ObstructionRemoval" target="_blank">Code</a>
         </div>
 
-        <div class="col m6 s12 center">
+        <div class="col m3 s12 center">
           <a href="https://drive.google.com/file/d/1ERBPgvPxWqSuivjOamSbji78syc3A-Vr/view?usp=sharing" target="_blank">
             <img src="website/images/icon_zip.png">
           </a>
