--- a/index.html
+++ b/index.html
@@ -222,6 +222,26 @@ Our results on numerous challenging scenarios of reflection and fence removal de
 
 
     </div>
+	  
+    <div class="section row scrollspy" id="video">
+      <div class="title">Video</div>
+      <div class="row">
+
+        <div class="col m6 s12 center">
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/pJWcHhofYTE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <br>
+          1-minute video
+        </div>
+
+        <div class="col m6 s12 center">
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/ICr6xi9wA94" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <br>
+          Two Minute Papers
+        </div>
+
+      </div>
+
+    </div>
 
 
     <div class="row section scrollspy" id="reference">
